--- a/.github/workflows/run-test.yml
+++ b/.github/workflows/run-test.yml
@@ -1,9 +1,13 @@
 name: Node.js Package
 
 on:
-  release:
-    types: [created]
-
+  workflow_dispatch:
+    inputs:
+      logLevel:
+        description: 'Log level'     
+        required: true
+        default: 'warning'
+        
 jobs:
   build:
     runs-on: self-hosted
