--- a/.github/workflows/run-test.yml
+++ b/.github/workflows/run-test.yml
@@ -12,5 +12,7 @@ jobs:
   build:
     runs-on: self-hosted
     steps:
+      - name: Checkout
+        uses: actions/checkout@v2
       - run: npm install
       - run: npm run test
