--- a/.github/workflows/run-test.yml
+++ b/.github/workflows/run-test.yml
@@ -14,5 +14,6 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+      - run: npx cypress verify  
       - run: npm install
       - run: npm run test
