--- a/.github/workflows/run-test.yml
+++ b/.github/workflows/run-test.yml
@@ -11,6 +11,7 @@ on:
 jobs:
   build:
     runs-on: self-hosted
+    container: cypress/browsers:node12.18.3-chrome87-ff82
     steps:
       - name: Checkout
         uses: actions/checkout@v2  
