--- a/.github/workflows/run-test.yml
+++ b/.github/workflows/run-test.yml
@@ -11,15 +11,14 @@ on:
 jobs:
   build:
     runs-on: self-hosted
-    container: cypress/browsers:node12.18.3-chrome87-ff82
     steps:
       - name: Checkout
         uses: actions/checkout@v2  
       - name: Cypress run
         uses: cypress-io/github-action@v2
-        with:
-          build: npm run test
-#           start: npm start  
+#         with:
+#           build: npm run test
+# #           start: npm start  
 #       - run: npm install
 #       - run: npx cypress verify  
 #       - run: npm run test
